--- a/src/index.css
+++ b/src/index.css
@@ -24,17 +24,17 @@ p {
 
 @font-face {
   font-family: Oswald;
-  src: url("../src/assets/fonts/Oswald-VariableFont_wght.ttf");
+  src: url("/fonts/Oswald-VariableFont_wght.ttf");
 }
 
 @font-face {
   font-family: Roboto;
-  src: url("../src/assets/fonts/Roboto-VariableFont_wdth,wght.ttf");
+  src: url("/fonts/Roboto-VariableFont_wdth,wght.ttf");
 }
 
 @font-face {
   font-family: Montserrat;
-  src: url("../src/assets/fonts/Montserrat-VariableFont_wght.ttf");
+  src: url("/fonts/Montserrat-VariableFont_wght.ttf");
 }
 
 @import "tailwindcss";
